--- a/.gitignore
+++ b/.gitignore
@@ -41,3 +41,9 @@ app.*.map.json
 /android/app/debug
 /android/app/profile
 /android/app/release
+
+# Environment variables and sensitive data
+.env
+
+# Project specific folders
+old-files/
