--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -34,6 +34,8 @@ dependencies:
   http: ^1.1.0
   flutter_markdown: ^0.6.18
   uuid: ^4.3.3
+  permission_handler: ^11.3.0
+  connectivity_plus: ^5.0.2
 
 
   # The following adds the Cupertino Icons font to your application.
