--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -36,6 +36,8 @@ dependencies:
   uuid: ^4.3.3
   permission_handler: ^11.3.0
   connectivity_plus: ^5.0.2
+  file_picker: ^6.1.1
+  cross_file: ^0.3.3+8
 
 
   # The following adds the Cupertino Icons font to your application.
