--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -30,13 +30,13 @@ environment:
 dependencies:
   flutter:
     sdk: flutter
-  supabase_flutter: ^1.10.25
+  supabase_flutter: ^2.8.1
   http: ^1.1.0
-  flutter_markdown: ^0.6.18
+  flutter_markdown: ^0.7.4+3
   uuid: ^4.3.3
   permission_handler: ^11.3.0
-  connectivity_plus: ^5.0.2
-  file_picker: ^6.1.1
+  connectivity_plus: ^6.1.0
+  file_picker: ^8.1.4
   cross_file: ^0.3.3+8
 
 
@@ -53,7 +53,7 @@ dev_dependencies:
   # activated in the `analysis_options.yaml` file located at the root of your
   # package. See that file for information about deactivating specific lint
   # rules and activating additional ones.
-  flutter_lints: ^4.0.0
+  flutter_lints: ^5.0.0
 
 # For information on the generic Dart part of this file, see the
 # following page: https://dart.dev/tools/pub/pubspec
