--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -22,6 +22,8 @@ dependencies:
   connectivity_plus: ^6.1.0
   file_picker: ^8.1.4
   cross_file: ^0.3.3+8
+  share_plus: ^7.2.2
+  path_provider: ^2.1.2
 
 
   # The following adds the Cupertino Icons font to your application.
